--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "todo-type",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.0",
-    "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@mui/styles": "^6.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/styled-components": "^5.1.0",
-    "i18next": "^19.4.5",
-    "i18next-browser-languagedetector": "^4.2.0",
-    "i18next-http-backend": "^1.0.12",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@types/styled-components": "^5.1.34",
+    "i18next": "^24.1.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^5.7.2",
-    "react-i18next": "^11.5.0",
-    "react-scripts": "^4.0.3",
-    "styled-components": "^5.1.0",
-    "typescript": "~3.7.2"
+    "react-i18next": "^15.2.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.13",
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -46,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.6"
+    "react-app-rewired": "^2.2.1"
   }
 }
